사전 과제 제출

--- a/2번 문제.md
+++ b/2번 문제.md
@@ -1,1 +1,1 @@
-
+TCP는 서버와 클라이언트가 통신할때 데이터가 정확히 전달되었는지 그리고 순서대로 전달되는 것을 보장합니다. UDP는 데이터가 중간에 유실되어도 확인하거나 다시 전달하지 않기 때문에 신뢰성이 떨어집니다. 대신 TCP 대비 속도가 더 빠릅니다.
