--- a/3번 문제.md
+++ b/3번 문제.md
@@ -1,1 +1,1 @@
-
+웹브라우저에서 네이버를 검색하면 브라우저에 기본 설정된 검색엔진을 통해서 네이버에 대한 검색 결과룰 보여줍니다. 주소에 www.naver.com을 입력했을 경우에는 dns서버를 통해서 네이버 웹 서비스의 실제 ip 주소를 얻습니다. 그리고 http통신을 통해서 네이버 메인 페이지에 필요한 데이터를 얻고 브라우저는 해당 데이터들을 통해서 화면을 렌더링 합니다.
