--- a/5번 문제.md
+++ b/5번 문제.md
@@ -1,1 +1,1 @@
-
+자바에서 ArrayList는 내부적으로 힙메모리를 가지고 있습니다. 데이터가 추가될 경우 이 힙메모리에 데이터를 입력합니다. 입력된 데이터 사이즈가 특정 임계값을 넘으면(ex 힙메모리의 절반을 넘는다) 더 큰 사이즈의 힙메모리를 생성하고 데이터를 그 힙메모리로 옮깁니다. ArrayList를 사용할때 최대 입력 데이터 사이즈를 알고 있다면 초기화시 이 값으로 세팅하면 중간에 발생하는 메모리할당 오버헤드를 줄일 수 있습니다.
